Fix wide appender buttons overlap in Cart & Checkout blocks in the Editor (https://github.com/woocommerce/woocommerce-blocks/pull/5801)
* Add the correct appender button for non empty groups

* Revert "Add the correct appender button for non empty groups"

This reverts commit 4b41d7d7f82461813b3464d1b4f931c442bce3be.

* Force position relative for custom InnerBlocks.ButtonBlockAppender  appenders.

Removing InnerBlocks.ButtonBlockAppender  from renderAppender = {InnerBlocks.ButtonBlockAppender } results in the black appender button beeing shown only when the block is selected, and we need the appender to be visible by default.

--- a/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/checkout/styles/editor.scss
@@ -23,6 +23,12 @@
 		.block-editor-block-list__layout {
 			display: block;
 		}
+
+		// Temporary fix after the appender button was positioned absolute
+		// See https://github.com/woocommerce/woocommerce-gutenberg-products-block/issues/5742#issuecomment-1032804168
+		.block-list-appender {
+			position: relative;
+		}
 	}
 }
 
